--- a/package.json
+++ b/package.json
@@ -6,20 +6,29 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
+    "bcryptjs": "^2.4.3",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "cloudinary": "^1.9.0",
-    "cloudinary-react": "^1.0.4",
+    "cloudinary-react": "^1.0.6",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
+    "eslint-loader": "^1.9.0",
     "express": "^4.15.2",
     "faker": "^4.1.0",
+    "file-loader": "^1.1.6",
+    "font": "0.0.4",
     "formidable": "^1.1.1",
     "fs-extra": "^3.0.1",
+    "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "mongoose": "^5.0.2",
+    "node-sass-chokidar": "0.0.3",
+    "postcss-loader": "^2.1.0",
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
+    "react-dev-utils": "^5.0.0",
     "react-dom": "^15.6.2",
     "react-hot-loader": "^1.3.1",
     "react-notifications": "^1.4.3",
@@ -32,14 +41,15 @@
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.70.0",
-    "wowjs": "^1.1.3",
-    "bcryptjs": "^2.4.3"
-    
+    "url-loader": "^0.6.2",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
