fix: easier for folks to run app locally

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,4 @@
-MEET_UP_KEY=optional
-
-EVENTBRITE_KEY=required
+EVENTBRITE_KEY=2Q55TKYPM7ESFW3MC2ZY
 
 DB_URL=mongodb://testAccount:password@ds161483.mlab.com:61483/tab_nabbers_test_db
 
@@ -8,18 +6,32 @@ STUDENT_SECRET=Iamtestingthisshitoutandseeifitworks
 
 NODE_ENVIROMENT=PRODUCTION
 
-SENDGRID_USERNAME=required
+SENDGRID_USERNAME=
 
-SENDGRID_PASSWORD=required
+SENDGRID_PASSWORD=
 
 SECRET=Tabnabbersisawesome
 
-GOOGLE_AUTHORIZE=required
-GITHUB_AUTHORIZE=required
-EVENTBRITE_AUTHORIZE=required
+GOOGLE_AUTH2_AUTHORIZE_ENDPOINT=https://accounts.google.com/o/oauth2/v2/auth?
+GOOGLE_AUTH2_TOKEN_ENDPOINT=https://www.googleapis.com/oauth2/v4/token?
+GOOGLE_CLIENT_ID=
+GOOGLE_SECRET_ID=
+GOOGLE_REDIRECT_URL=http://localhost:3000/authorize
+GOOGLE_SCOPE=https://www.googleapis.com/auth/calendar
 
-GITHUB_TOKEN=required
-GOOGLE_TOKEN=required
+GITHUB_AUTHORIZE_ENDPOINT=https://github.com/login/oauth/authorize?
+GITHUB_TOKEN_ENDPOINT=https://github.com/login/oauth/access_token?
+GITHUB_CLIENT_ID=
+GITHUB_SECRET_ID=
+GITHUB_REDIRECT_URL=http://localhost:3000/authorize
+GITHUB_SCOPE=public_repo
 
-EVENTBRITE_CLIENT_ID=required
-EVENTBRITE_CLIENT_SECRET=required
+
+EVENTBRITE_CLIENT_ID=
+EVENTBRITE_CLIENT_SECRET=
+EVENT_BRITE_AUTHORIZE_ENDPOINT=https://www.eventbrite.com/oauth/authorize?
+
+GOOGLE_AUTHORIZE=&access_type=offline&response_type=code
+GOOGLE_TOKEN=grant_type=authorization_code
+EVENTBRITE_AUTHORIZE=response_type=code
+
