--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,7 @@
   },
   "rules": {
     "quotes": 0,
-    "no-console": 1,
+    "no-console": 0,
     "no-debugger": 1,
     "no-var": 1,
     "semi": [1, "always"],
@@ -34,8 +34,12 @@
     "no-alert": 0,
     "no-lone-blocks": 0,
     "jsx-quotes": 1,
-    "react/display-name": [ 1, {"ignoreTranspilerName": false }],
-    "react/forbid-prop-types": [1, {"forbid": ["any"]}],
+    "react/display-name": [1, {
+      "ignoreTranspilerName": false
+    }],
+    "react/forbid-prop-types": [1, {
+      "forbid": ["any"]
+    }],
     "react/jsx-boolean-value": 1,
     "react/jsx-closing-bracket-location": 0,
     "react/jsx-curly-spacing": 1,
@@ -67,4 +71,3 @@
     "react/wrap-multilines": 0
   }
 }
-
