--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cloudinary": "^1.9.0",
     "cloudinary-react": "^1.0.4",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "faker": "^4.1.0",
