--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "open": "0.0.5",
     "react-edit-inline": "^1.0.8",
     "react-test-renderer": "^15.6.1",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^6.0.7",
     "shelljs": "^0.8.2",
     "style-loader": "^0.18.2"
