--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "chalk": "1.1.3",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.0.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -37,6 +39,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-test-renderer": "^16.4.1",
     "stringquery": "^1.0.8",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -84,6 +87,14 @@
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
+    "coverageThreshold": {
+      "global": {
+        "branches": 70,
+        "functions": 70,
+        "lines": 70,
+        "statements": 70
+      }
+    },
     "moduleFileExtensions": [
       "web.js",
       "mjs",
@@ -92,7 +103,8 @@
       "web.jsx",
       "jsx",
       "node"
-    ]
+    ],
+    "setupTestFrameworkScriptFile": "<rootDir>/src/setupTests.js"
   },
   "babel": {
     "presets": [
